# Android-App-Profiling

./: A3T-setup.txt  README  octave-core
Testcase/src/: Testcase.java
app/: build.xml~
app_inst/: .classpath  .project  Readme  aft_instr.txt  bef_instr.txt  build.xml
app_inst/ml4profiler/: README.md
app_inst/output/: sample 
app_inst_clean/: aft_instr.txt  bef_instr.txt
apprepo/: Readme  build.xml
apprepo/FaceDetector/: .classpath  README  aft_instr.txt  bef_instr.txt  build.xml
apprepo/FaceDetector_new/: aft_instr.txt  bef_instr.txt  build.xml
apprepo/LeakLocation/: .project  AndroidManifest.xml  aft_instr.txt  bef_instr.txt  build.xml~
apprepo/PocketSphinxDemo/: .classpath  .project  README  aft_instr.txt  bef_instr.txt  build.xml
apprepo/i-team-video_segment/: about  cmakedebug.py
apprepo/i-team-video_segment/PanoServer/: CMakeLists.txt  compositing_widget.cpp  compositing_widget.h  depend.cmake  main_window.cpp  main_window.h  pano_server_tcp.cpp  pano_server_tcp.h  pano_server_udp.cpp  pano_server_udp.h  thumbnail_view.cpp  thumbnail_view.h
apprepo/i-team-video_segment/SpacePlayer/: CMakeLists.txt  buffered_image.cpp  canvas_cut.cpp  canvas_cut.h  compositing_widget.cpp  compositing_widget.h  depend.cmake  foreground_tracker.cpp  foreground_tracker.h  main.cpp  main_window.cpp  main_window.h  play_unit.cpp  play_unit.h  thumbnail_view.cpp  video_analyzer.cpp  video_analyzer.h
apprepo/i-team-video_segment/VideoPatch/: CMakeLists.txt  compositing_widget.cpp  compositing_widget.h  depend.cmake  main.cpp  main_window.cpp  main_window.h
apprepo/i-team-video_segment/flow_lib/: CMakeLists.txt  depend.cmake  flow_frame.proto  flow_utility_options.proto  optical_flow_unit.cpp  optical_flow_unit.h  region_flow.cpp  region_flow.h
apprepo/i-team-video_segment/gpu-sift/: CMakeLists.txt  GLTexImage.cpp  GlobalUtil.cpp  History.txt  LiteWindow.h  ProgramGLSL.cpp  ProgramGLSL.cpp.orig.cpp  ProgramGLSL.patch  PyramidCU.cpp  SiftGPU.cpp  SiftGPU.h  depend.cmake
apprepo/i-team-video_segment/gpu-sift/data/: Thumbs.db
apprepo/i-team-video_segment/gpu-sift/src/ServerSiftGPU/: ServerSiftGPU.cpp  server.cpp
apprepo/i-team-video_segment/gpu-sift/src/TestWin/: MultiThreadSIFT.cpp
apprepo/i-team-video_segment/gpu_klt_flow/: .CMakeLists.txt.swp  .depend.cmake.swp  CMakeLists.txt  depend.cmake
apprepo/i-team-video_segment/gpu_klt_flow/GL/: v3d_gpubase.cpp  v3d_gpubase.h
apprepo/i-team-video_segment/graphcut/: CMakeLists.txt  depend.cmake  graph.cpp  graph.h  main.cpp
apprepo/i-team-video_segment/imagefilter/: CMakeLists.txt  bilateral_filter_1D.cpp  bilateral_filter_1D.h  compile_main.sh  depend.cmake  image_filter.cpp  image_filter.h  image_util.h  main.cpp  nnf.cpp  nnf.h  warping.cpp  warping.h
apprepo/i-team-video_segment/irradiance_estimation/: CMakeLists.txt  depend.cmake  irradiance_estimation.cpp  irradiance_estimation.h  main.cpp
apprepo/i-team-video_segment/irradiance_estimation/py/: create_plots.py  error_bars.py  inv_emor.txt  log_to_table.py  process_file.py
apprepo/i-team-video_segment/joint_seg_tree_sample/: CMakeLists.txt  depend.cmake  joint_seg_tree.cpp
apprepo/i-team-video_segment/joint_segmentation/: CMakeLists.txt  depend.cmake  joint_segmentation_unit.cpp  joint_segmentation_unit.h
apprepo/i-team-video_segment/libfreenect/c/examples/: CMakeLists.txt  glview.cc
apprepo/i-team-video_segment/patch_track/: CMakeLists.txt  buffered_image.h  depend.cmake  main.cpp  main_window.cpp  main_window.h
apprepo/i-team-video_segment/seg_tree_sample/: 88_2.avi  88_3.avi  88_4.avi  88_5.mov  CMakeLists.txt  blood1_hires.avi  depend.cmake  duchess1.avi  eel_enc.avi  nocountryforoldmen.avi  nocountryforoldmen.mov  sample.avi  seg_tree.cpp  sweeney_4.mov  test.mov  testing.mov  testing1.mov  to2.mov  to3.mov
apprepo/i-team-video_segment/segment_ui/: CMakeLists.txt  SurfaceCarve.cpp  SurfaceCarve.h  SurfaceCarve_old.cpp  SurfaceCarve_old.h  depend.cmake  main.cpp  mainWindow.cpp  mainWindow.h  movieWidget.cpp  movieWidget.h  video_data.cpp  video_data.h
apprepo/i-team-video_segment/segmentation/: CMakeLists.txt  dense_segmentation_graph.cpp  dense_segmentation_graph.h  depend.cmake  depth.cpp  depth.h  frame_set_swap.cpp  frame_set_swap.h  generic_swap.cpp  generic_swap.h  histograms.cpp  histograms.h  pixel_distance.cpp  pixel_distance.h  region_descriptor.cpp  region_descriptor.h  region_segmentation_graph.cpp  region_segmentation_graph.h  segmentation.cpp  segmentation.h  segmentation_common.cpp  segmentation_common.h  segmentation_graph.cpp  segmentation_graph.h  segmentation_options.proto  segmentation_unit.cpp  segmentation_unit.h
apprepo/i-team-video_segment/segmentation/simpleCL/: CMakeLists.txt
apprepo/i-team-video_segment/segmentation/timer/: timer.cpp
apprepo/i-team-video_segment/sift_lib/: CMakeLists.txt  depend.cmake  sift_unit.cpp  sift_unit.h
apprepo/i-team-video_segment/tvl1_opencl/: CMakeLists.txt  README.txt  cl_flow_unit.cpp  cl_flow_unit.h  demo.cpp  depend.cmake
apprepo/i-team-video_segment/tvl1_opencl/simpleCL/: simpleCL.h
apprepo/i-team-video_segment/tvl1_opencl/timer/: timer.hpp
apprepo/i-team-video_segment/tvl1_opencl/tvl1/: CMakeLists.txt  kernels.cl  tvl1.cpp  tvl1.hpp
apprepo/i-team-video_segment/tvl1_opencl_qt/: CMakeLists.txt  FrameLabel.cpp  FrameLabel.h  MainWindow.cpp  MainWindow.h  main.cpp  mainWindow.ui  tvl1_opencl_qt.files  tvl1_opencl_qt.includes
apprepo/i-team-video_segment/tvl1_opencl_qt/cmake/: FindOpenCL.cmake
apprepo/i-team-video_segment/tvl1_opencl_qt/simpleCL/: simpleCL.c
apprepo/i-team-video_segment/tvl1_opencl_qt/timer/: CMakeLists.txt
apprepo/i-team-video_segment/tvl1_opencl_qt/tvl1/: tvl1.cpp  tvl1.hpp
apprepo/i-team-video_segment/video_playground/: CMakeLists.txt  color_checker.cpp  color_checker.h  color_profile.m  depend.cmake  main.cpp
experiment/faceDetector/: facesused.txt
ml4profiler/: new.pl  new.pl~
ml4profiler/output/: exectime.mat  (+6 more)
orig_a3t/: .classpath  .project  README.txt  fieldsblacklist.txt  fieldswhitelist.txt  input_methods.txt  postsdkbuild
(+1251 files in other folders)
